--- a/task_1.ipynb
+++ b/task_1.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "f33bf4ef",
    "metadata": {},
    "outputs": [],
@@ -31,9 +31,9 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Use TensorFlow to load MNIST (easy method)\n",
-    "import tensorflow.keras as keras\n",
+    "import tensorflow.keras.datasets.mnist as mnist\n",
     "\n",
-    "(x_train, y_train), (x_test, y_test) = keras.datasets.mnist.load_data()"
+    "(x_train, y_train), (x_test, y_test) = mnist.load_data()"
    ]
   },
   {
