--- a/task_1.ipynb
+++ b/task_1.ipynb
@@ -78,6 +78,12 @@
    "metadata": {},
    "source": [
     "# 😘😘💕💕😍😍😁😁\n",
+    "---\n",
+    "---\n",
+    "---\n",
+    "---\n",
+    "---\n",
+    "---\n",
     "\n",
     "![image.png](attachment:image.png)\n",
     "---\n",
@@ -120,10 +126,12 @@
    "outputs": [],
    "source": [
     "# Forward pass\n",
+    "\n",
+    "@np.vectorize\n",
     "def sigmoid(x):\n",
     "    return 1/1 + np.exp(-x)\n",
     "\n",
-    "\n",
+    "@np.vectorize\n",
     "def d_sigmoid(x):\n",
     "    return sigmoid * (1- sigmoid)"
    ]
@@ -176,36 +184,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cfbb35bc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ True, False,  True, False],\n",
-       "       [ True,  True, False, False],\n",
-       "       [ True,  True,  True,  True]])"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "def dropout(x, dropout_rate, mode = 'train'):"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "faf76a0e",
-   "metadata": {},
-   "source": [
-    "## Neural Network"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "id": "87f22380",
    "metadata": {},
@@ -226,25 +204,130 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "faf76a0e",
+   "metadata": {},
+   "source": [
+    "## Neural Network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "018aed79",
+   "metadata": {},
+   "source": [
+    "You should implement a fully-connected NN class where with number of \n",
+    "hidden layers, units, activation functions can be changed. In addition, you \n",
+    "can add dropout or regularizer (L1 or L2). Report the parameters used \n",
+    "(update rule, learning rate, decay, epochs, batch size) and include the plots \n",
+    "in your report"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 89,
    "id": "1f27db5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NeuralNetwork:\n",
+    "\n",
+    "    def  __init__(self, input_nodes, output_nodes, hidden_nodes, learning_rate, activation):\n",
+    "\n",
+    "        self.input_nodes = input_nodes\n",
+    "        self.output_nodes = output_nodes\n",
+    "        self.hidden_nodes = hidden_nodes\n",
+    "        self.learning_rate = learning_rate\n",
+    "        self.activation  = activation\n",
+    "\n",
+    "        self.create_weights()\n",
+    "\n",
+    "\n",
+    "    def create_weights(self):\n",
+    "\n",
+    "        self.weights_1 = np.random.randn((self.input_nodes,self.hidden_nodes))\n",
+    "        self.weights_2 = np.random.randn((self.hidden_nodes,self.output_nodes))\n",
+    "\n",
+    "\n",
+    "    def train(self,)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "77f18153",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for *: 'bool' and 'NoneType'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32me:\\MSc AI\\Math Coursework\\City-INM702\\task_1.ipynb Cell 19\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/e%3A/MSc%20AI/Math%20Coursework/City-INM702/task_1.ipynb#X33sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mTrue\u001b[39;49;00m \u001b[39m*\u001b[39;49m \u001b[39mNone\u001b[39;49;00m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'bool' and 'NoneType'"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ 0.75402098, -0.75979873,  0.05570475, -0.13239336,  0.73785389,\n",
+       "        -0.52235532,  0.30727722,  1.64200432,  1.49424853,  1.32011897,\n",
+       "         0.38164908],\n",
+       "       [-0.25393194, -1.35349686,  0.22215483,  0.13496246, -1.78068002,\n",
+       "         0.37887754, -0.94287678,  0.39594363,  1.58696526, -1.86496961,\n",
+       "         0.11898366],\n",
+       "       [ 1.38787432,  0.60292542, -2.01261515,  0.28001283, -0.81434127,\n",
+       "         0.64522613,  1.05949996,  1.66242463,  0.02349717, -1.58286343,\n",
+       "         0.02355388],\n",
+       "       [ 0.13382733,  1.14988885,  0.55504611, -1.23224249,  0.1590191 ,\n",
+       "         0.29065871, -1.01293947, -1.29141372,  0.56016374,  0.812477  ,\n",
+       "        -0.89456446],\n",
+       "       [ 0.14661552,  0.47807358,  0.94985876, -0.07323318,  0.34729275,\n",
+       "         0.18941079,  0.33196426, -0.37043887,  1.3071589 , -0.42839491,\n",
+       "        -0.07175106],\n",
+       "       [-1.36077223,  0.78059918,  0.5284869 ,  0.25202177, -1.74793299,\n",
+       "        -0.18762057,  0.70882506,  0.30872799,  0.81264492,  0.22710081,\n",
+       "         0.56975473],\n",
+       "       [-1.37385266, -0.69394456, -0.0836407 ,  1.05793094,  0.46416261,\n",
+       "         1.34602764, -1.36920839,  0.83664373,  0.10651681, -0.1246885 ,\n",
+       "         0.53968353],\n",
+       "       [-0.49467946,  0.98450928, -0.76403935,  1.273212  , -0.30717326,\n",
+       "        -1.66759014,  1.02350709,  0.82865907,  2.18054729, -1.39821496,\n",
+       "         0.55084526],\n",
+       "       [-0.30725545, -0.05655356, -0.0271406 , -2.16947504,  1.08077742,\n",
+       "        -0.47488545,  0.36060809,  0.29235341, -0.18389104,  0.17275645,\n",
+       "        -0.41224773],\n",
+       "       [ 0.27704663, -1.36831472, -1.15832741,  0.09651803,  0.37962635,\n",
+       "         2.26503876, -1.27412314,  3.00093006, -0.93209598, -0.96487424,\n",
+       "         0.27580026]])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "True * None"
+    "np.random.randn(10,11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "22f2973d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 9])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NeuralNetwork(5,2,20,1,1).create_weights()"
    ]
   },
   {
@@ -377,11 +460,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ac271f58",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "wumpus\n"
+     ]
+    }
+   ],
+   "source": [
+    "%\n",
+    "\n",
+    "print(\"wumpus\")"
+   ]
   }
  ],
  "metadata": {
@@ -400,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
