--- a/task_2/task_2.ipynb
+++ b/task_2/task_2.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# INM702: Task 2\n",
     "\n",
-    "This task is about forecasting mean daily temperatures using data from a weather station near Heathrow Airport in London, UK. The dataset can be found on Kaggle [here](https://www.kaggle.com/datasets/emmanuelfwerr/london-weather-data).\n",
+    "This task is about forecasting daily mean temperatures using data from a weather station near Heathrow Airport in London, UK. The dataset can be found on Kaggle [here](https://www.kaggle.com/datasets/emmanuelfwerr/london-weather-data).\n",
     "\n",
     "We use a recurrent neural network to achieve this, though other techniques include standard statistical methods such as the autoregressive integrated moving average (ARIMA). The implementation is done using PyTorch."
    ]
