--- a/task1_rafi.ipynb
+++ b/task1_rafi.ipynb
@@ -58,12 +58,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# In Python, and specifically in NumPy, \n",
+    "# when you have an array or a sequence of boolean values, the astype function is used to convert these boolean values into a different data type.\n",
     "def relu(x):\n",
-    "    return max(0.0,x)"
+    "    return x * (x >= 0), (x > 0).astype(float)\n",
+    "\n"
    ]
   },
   {
@@ -79,9 +82,157 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def softmax(x):\n",
-    "    return np.exp(x) / sum(np.exp(x))"
+    "# Softmax with derivative\n",
+    "def softmax(vec):\n",
+    "    s = np.exp(vec) / np.exp(vec).sum()\n",
+    "    return s  #, s * (np.eye(s.size) - s.reshape(-1, 1))\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inverted Dropout\n",
+    "This implementation uses “inverted dropout”, which means that the dropout mask is scaled by 1 / (1 - dropout_rate). This ensures that the expected sum of A remains the same as if no dropout was applied, allowing us to use the same forward pass during testing (with dropout_rate = 0). This is why it’s called “inverted” dropout: instead of scaling up during testing (which is what the original dropout does), we scale down during training. This is generally more convenient and efficient."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inverted_dropout(x, dropout_rate):\n",
+    "\n",
+    "      dropout_mask = (np.random.rand(*x.shape) < (1 - dropout_rate)) / (1 - dropout_rate)\n",
+    "\n",
+    "      x *= dropout_mask\n",
+    "\n",
+    "      return x\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Neural Network\n",
+    "\n",
+    "You should implement a fully-connected NN class where with number of \n",
+    "hidden layers, units, activation functions can be changed. In addition, you \n",
+    "can add dropout or regularizer (L1 or L2).  \n",
+    "Report the parameters used \n",
+    "(update rule, learning rate, decay, epochs, batch size) and include the plots \n",
+    "in your report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class NeuralNetwork:\n",
+    "\n",
+    "    def __init__(self, layers_sizes ,l1,l2, activation_function, dropout_rate):\n",
+    "\n",
+    "\n",
+    "        self.layers_sizes = layers_sizes\n",
+    "        self.num_layers = len(layers_sizes)\n",
+    "        self.l1 = l1\n",
+    "        self.l2 = l2\n",
+    "        self.activation_function = activation_function\n",
+    "        self.dropout_rate = dropout_rate\n",
+    "        self.parameters = self.initialise_parameters()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "        def initialise_parameters(self):\n",
+    "\n",
+    "            params = {}\n",
+    "            for l in range(1, self.num_layers):\n",
+    "                \n",
+    "                params[f\"W{l}\"] = np.random.randn(self.layers_sizes, 1-self.layers_sizes)\n",
+    "                params[f\"b{l}\"]= np.zeros(self.layers_sizes[l],1)\n",
+    "\n",
+    "            return params\n",
+    "\n",
+    "\n",
+    "        def forward_pass(X):\n",
+    "\n",
+    "            cache = {\"A0\":X}\n",
+    "            for l in range(1, self.num_layers):\n",
+    "\n",
+    "\n",
+    "                A1 =  np.dot(X, self.parameters[f\"W{l}\"]) + self.parameters[f\"b{l}\"]\n",
+    "\n",
+    "                \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -100,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
