--- a/task_1/task_1.ipynb
+++ b/task_1/task_1.ipynb
@@ -126,7 +126,7 @@
     "    ds = s * (1.0 - s)\n",
     "    return s, ds\n",
     "\n",
-    "# ReLU with derivative\n",
+    "# ReLU with derivative   ()\n",
     "def relu(x):\n",
     "    return x * (x >= 0), (x > 0).astype(float)\n",
     "\n",
@@ -335,6 +335,8 @@
     "\n",
     "        return Al, cache\n",
     "    \n",
+    "\n",
+    "\n",
     "    # Backpropagation\n",
     "    def backpropagation(self, A, Y, cache):\n",
     "        m = Y.shape[1]\n",
@@ -349,7 +351,7 @@
     "            Al_prev = cache[f\"A{l - 1}\"]\n",
     "            Wl = self.parameters[f\"W{l}\"]\n",
     "\n",
-    "            # Apply dropout during backpropagation\n",
+    "            # Apply dropout during backpropagation (This ensures that the dropped neurons don't contribute to weight updates during training.)\n",
     "            if f\"mask{l}\" in self.dropout_masks:\n",
     "                dZ *= self.dropout_masks[f\"mask{l}\"]\n",
     "            \n",
@@ -800,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -818,7 +820,7 @@
     "\n",
     "# Calculate accuracy\n",
     "accuracy = model.compute_accuracy(predictions, y_test_one_hot)\n",
-    "loss = model.compute_categorical_cross_entropy_loss(predictions, y_test_one_hot)\n",
+    "# loss = model.compute_categorical_cross_entropy_loss(predictions, y_test_one_hot)\n",
     "loss = model.compute_cost_with_regularization(predictions, y_test_one_hot)\n",
     "\n",
     "print(f\"Accuracy: {round(accuracy, 4) * 100}%\")\n",
@@ -827,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "id": "1bf10868",
    "metadata": {},
    "outputs": [
@@ -854,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "id": "3121ee17",
    "metadata": {
     "scrolled": false
@@ -885,7 +887,7 @@
        "       [  12,   10,    2,   14,   39,    5,    1,   17,    8,  901]])"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
