--- a/task1_rafi.ipynb
+++ b/task1_rafi.ipynb
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,13 +161,88 @@
     "            return params\n",
     "\n",
     "\n",
-    "        def forward_pass(X):\n",
     "\n",
+    "        \n",
+    "        def inverted_dropout(self, Zl):\n",
+    "            dropout_mask = (np.random.rand(*Zl.shape) < self.dropout_rate) / (1 - self.dropout_rate)\n",
+    "            return dropout_mask\n",
+    "    \n",
+    "        def forward_pass(self,X, training=True):\n",
+    "            self.dropout_masks = {}\n",
     "            cache = {\"A0\":X}\n",
     "            for l in range(1, self.num_layers):\n",
+    "                Wl, bl = self.parameters[f\"W{l}\"], self.parameters[f\"b{l}\"]\n",
+    "                Al_prev = cache[f\"A{l - 1}\"]\n",
+    "                Zl = np.dot(Wl, Al_prev) + bl  \n",
     "\n",
     "\n",
-    "                A1 =  np.dot(X, self.parameters[f\"W{l}\"]) + self.parameters[f\"b{l}\"]\n",
+    "                if training and l < self.num_layers - 1:\n",
+    "                    dropout_mask = self.inverted_dropout(Zl)\n",
+    "                    self.dropout_masks[f\"mask{l}\"] = dropout_mask\n",
+    "                    Zl *= dropout_mask\n",
+    "\n",
+    "\n",
+    "                Al = self.activation_function(Z1)[0]\n",
+    "                \n",
+    "\n",
+    "                # Store weighted sum and activation\n",
+    "                cache[f\"Z{l}\"] = Zl\n",
+    "                cache[f\"A{l}\"] = Al\n",
+    "\n",
+    "                return Al, cache\n",
+    "            \n",
+    "\n",
+    "        def backward_pass(self,A, Y, cache):\n",
+    "\n",
+    "            m = Y.shape[1] \n",
+    "\n",
+    "\n",
+    "            gradients = {}\n",
+    "\n",
+    "            \n",
+    "            dz = A - Y\n",
+    "\n",
+    "\n",
+    "\n",
+    "            for l in reversed(range(1,self.num_layers)):\n",
+    "\n",
+    "                Al_prev = cache[f\"A{l - 1}\"]\n",
+    "                Wl = self.parameters[f\"W{l}\"]\n",
+    "\n",
+    "\n",
+    "                \n",
+    "                # Apply dropout during backpropagation\n",
+    "                if f\"mask{l}\" in self.dropout_masks:\n",
+    "                    dZ *= self.dropout_masks[f\"mask{l}\"]\n",
+    "\n",
+    "\n",
+    "\n",
+    "                    # Add weight and bias gradients to dictionary\n",
+    "                gradients[f\"dW{l}\"] = np.dot(dZ, Al_prev.T) / m    #(m = normalization or averaging the gradients across the mini-batch or the entire dataset.)\n",
+    "                gradients[f\"db{l}\"] = np.sum(dZ, axis = 1, keepdims = True) / m\n",
+    "                \n",
+    "                # Compute derivative using activation function\n",
+    "                dZ = np.dot(Wl.T, dZ) * self.activation_function(Al_prev)[1]\n",
+    "\n",
+    "            return gradients\n",
+    "            \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n",
+    "            \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "                      \n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "                \n",
     "\n",
@@ -180,10 +255,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\local_adfx757\\Temp\\ipykernel_5152\\4018246832.py:2: RuntimeWarning: divide by zero encountered in log\n",
+      "  np.log(0)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-inf"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "np.log(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.e-15, 1.e-01, 1.e+00, 1.e+00])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "A = np.array([0.00000000000000000001, 0.1, 1.1,1.5])\n",
+    "np.clip(A, 1e-15, 1-1e-15)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 3, 3], dtype=int64)"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.array([[10, 15, 12,19],\n",
+    "       [13, 14, 15,16],[16, 15, 12,19]])\n",
+    "\n",
+    "(np.argmax(a, axis=1))"
+   ]
   },
   {
    "cell_type": "code",
@@ -194,24 +336,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.05"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "0.05 * np.sign(-5)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.2"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "-2/10"
+   ]
   },
   {
    "cell_type": "code",
