--- a/task_1/task_1.ipynb
+++ b/task_1/task_1.ipynb
@@ -17,7 +17,7 @@
    "id": "2a36b983",
    "metadata": {},
    "source": [
-    "## Implementation Overview\n",
+    "**Implementation Overview**\n",
     "- Activation : sigmoid, ReLU, Softmax\n",
     "- Regularization : Dropout, L1 (Lasso) , L2 (Ridge)\n",
     "- Fully parametrizable Neural Network class\n",
@@ -595,6 +595,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1ce1680c",
+   "metadata": {},
+   "source": [
+    "## Base Neural Network Model (**Model 1**)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "be9b8f64",
    "metadata": {},
    "source": [
@@ -939,7 +947,7 @@
    "id": "852bf0bd",
    "metadata": {},
    "source": [
-    "### (f) Evaluate Different Architectures/Parameters\n",
+    "## (f) Evaluate Different Architectures/Parameters\n",
     "\n",
     "We try changing the activation function to ReLU, use mini-batch gradient descent and stochastic gradient descent, and adjust the learning rate. We try changing the neural network architecture to include two hidden layers, and we introduce dropout L1 and L2 regularisations."
    ]
@@ -982,6 +990,14 @@
     "input_size = X_train.shape[0]\n",
     "output_size = y_train_one_hot.shape[0]\n",
     "layer_sizes = [input_size, 64, 64, output_size]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c26dc319",
+   "metadata": {},
+   "source": [
+    "##### Model 2 (Train)"
    ]
   },
   {
@@ -1191,6 +1207,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4b4fa41a",
+   "metadata": {},
+   "source": [
+    "##### Model 2 (Test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "ba727400",
@@ -1301,6 +1325,14 @@
     "input_size = X_train.shape[0]\n",
     "output_size = y_train_one_hot.shape[0]\n",
     "layer_sizes = [input_size, 64, output_size]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2332b7b",
+   "metadata": {},
+   "source": [
+    "##### Model 3 (Train)"
    ]
   },
   {
@@ -1512,6 +1544,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c3856028",
+   "metadata": {},
+   "source": [
+    "##### Model 3 (Test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "id": "211c19e1",
@@ -1621,6 +1661,14 @@
     "input_size = X_train.shape[0]\n",
     "output_size = y_train_one_hot.shape[0]\n",
     "layer_sizes = [input_size, 64, 64, output_size]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b77e946",
+   "metadata": {},
+   "source": [
+    "##### Model 4 (Train)"
    ]
   },
   {
@@ -1827,6 +1875,14 @@
     "plt2.legend([\"Accuracy\"], loc = \"upper right\")\n",
     "plt.savefig(\"model_4.pdf\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "307f62a3",
+   "metadata": {},
+   "source": [
+    "##### Model 4 (Test)"
    ]
   },
   {
