--- a/task_1/task_1.ipynb
+++ b/task_1/task_1.ipynb
@@ -18,11 +18,11 @@
    "metadata": {},
    "source": [
     "**Implementation Overview**\n",
-    "- Activation : sigmoid, ReLU, Softmax\n",
-    "- Regularization : Dropout, L1 (Lasso) , L2 (Ridge)\n",
-    "- Fully parametrizable Neural Network class\n",
+    "- Activation : Sigmoid, ReLU, Softmax\n",
+    "- Regularisation : Dropout, L1 (Lasso), L2 (Ridge)\n",
+    "- Fully Parametrisable Neural Network Class\n",
     "- Optimiser : SGD, mini-batch, Adam\n",
-    "- Different neural network architectures/parameters"
+    "- Different Neural Network Architectures/Parameters"
    ]
   },
   {
@@ -961,8 +961,8 @@
     "\n",
     "Proportion of nodes dropped for dropout regularisation is 50%. We use the ReLU activation function, mini-batch gradient descent, learning rate of 1 and batch size of 32. We use two hidden layers here each containing 64 nodes.\n",
     "\n",
-    "- Activation : Relu\n",
-    "- Optimiser : Mini-batch gradient descent\n",
+    "- Activation : ReLU\n",
+    "- Optimiser : Mini-Batch Gradient Descent\n",
     "- Hidden layers : 2\n",
     "- Epochs : 150\n",
     "- Learning rate : 1\n",
@@ -1296,7 +1296,7 @@
     "\n",
     "We use the ReLU activation function, stochastic gradient descent, learning rate of 1 and no batch size. One hidden layer of 64 nodes is used here. L1 and L2 regularisation (elastic-net) each of strength 0.1 is used.\n",
     "\n",
-    "- Activation : Relu\n",
+    "- Activation : ReLU\n",
     "- Optimiser : Stochastic Gradient Descent\n",
     "- Hidden layers : 2\n",
     "- Epochs : 150\n",
@@ -1633,7 +1633,7 @@
     "\n",
     "Here, we use no regularisation. The ReLU activation function is used, with the Adam optimiser. The batch size is 32 and the learning rate is 0.001. Two hidden layers of 64 nodes are used.\n",
     "\n",
-    "- Activation : Relu\n",
+    "- Activation : ReLU\n",
     "- Optimiser : Adaptive Moment Estimation (Adam)\n",
     "- Hidden layers : 2\n",
     "- Epochs : 150\n",
