--- a/task_1/task_1.ipynb
+++ b/task_1/task_1.ipynb
@@ -21,7 +21,7 @@
     "- Activation : Sigmoid, ReLU, Softmax\n",
     "- Regularisation : Dropout, L1 (Lasso), L2 (Ridge)\n",
     "- Fully Parametrisable Neural Network Class\n",
-    "- Optimiser : SGD, mini-batch, Adam\n",
+    "- Optimiser : SGD, Mini-Batch, Adam\n",
     "- Different Neural Network Architectures/Parameters"
    ]
   },
