--- a/task_1/task_1.ipynb
+++ b/task_1/task_1.ipynb
@@ -646,7 +646,7 @@
     "We train our neural network on our training set. The sigmoid activation function is used, as well as mini-batch gradient descent. The neural network contains one hidden layer of 64 nodes. The batch size is 32, learning rate is 0.1 and we train on 150 epochs. No regularisation is applied.\n",
     "\n",
     "- Activation : Sigmoid\n",
-    "- Optimiser : Mini-batch gradient descent\n",
+    "- Optimiser : Mini-Batch Gradient Descent\n",
     "- Hidden layers : 1\n",
     "- Epochs : 150"
    ]
@@ -1300,7 +1300,7 @@
     "- Optimiser : Stochastic Gradient Descent\n",
     "- Hidden layers : 2\n",
     "- Epochs : 150\n",
-    "- Regularization : L1 (Lasso) and L2 (Ridge)\n",
+    "- Regularisation : L1 (Lasso) and L2 (Ridge)\n",
     "- Learning rate : 0.1"
    ]
   },
