--- a/task_1/task_1.ipynb
+++ b/task_1/task_1.ipynb
@@ -648,7 +648,8 @@
     "- Activation : Sigmoid\n",
     "- Optimiser : Mini-Batch Gradient Descent\n",
     "- Hidden layers : 1\n",
-    "- Epochs : 150"
+    "- Epochs : 150\n",
+    "- Learning rate : 0.1
    ]
   },
   {
