--- a/task_1/task_1.ipynb
+++ b/task_1/task_1.ipynb
@@ -649,7 +649,7 @@
     "- Optimiser : Mini-Batch Gradient Descent\n",
     "- Hidden layers : 1\n",
     "- Epochs : 150\n",
-    "- Learning rate : 0.1
+    "- Learning rate : 0.1"
    ]
   },
   {
