--- a/task_2/task_2.ipynb
+++ b/task_2/task_2.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "391b034e",
    "metadata": {},
    "outputs": [],
@@ -54,17 +54,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "6a7d519c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x2bd3fd8cdd0>"
+       "<torch._C.Generator at 0x14e07224190>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "a1b8b7ae",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"dataset\\london_weather.csv\", delimiter = \",\")\n",
+    "df = pd.read_csv(\"london_weather.csv\", delimiter = \",\")\n",
     "\n",
     "# Check for duplicate rows or NA values\n",
     "print(df.isnull().sum(), \"\\n\")\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "d35b4e52",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "0fed295c",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
        "[15341 rows x 10 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "79e890bb",
    "metadata": {},
    "outputs": [
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "40c8c435",
    "metadata": {},
    "outputs": [
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "13011ce1",
    "metadata": {},
    "outputs": [
@@ -516,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "1c08fd70",
    "metadata": {},
    "outputs": [
@@ -532,7 +532,7 @@
        "       [-2.1430392]], dtype=float32)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "id": "17d81524",
    "metadata": {},
    "outputs": [
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "id": "07baf46c",
    "metadata": {},
    "outputs": [
@@ -602,7 +602,7 @@
        " torch.Size([362, 1]))"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "fc94e060",
    "metadata": {},
    "outputs": [
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "22911f9d",
    "metadata": {},
    "outputs": [],
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "id": "612f8424",
    "metadata": {},
    "outputs": [],
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 15,
    "id": "78d1dd3a",
    "metadata": {},
    "outputs": [],
@@ -816,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 16,
    "id": "b3dadb7c",
    "metadata": {
     "scrolled": true
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 17,
    "id": "f23e2747",
    "metadata": {},
    "outputs": [
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 18,
    "id": "fed32433",
    "metadata": {},
    "outputs": [
@@ -976,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "id": "1e93e87a",
    "metadata": {},
    "outputs": [],
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 20,
    "id": "29a2e736",
    "metadata": {},
    "outputs": [],
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "id": "0b9a32cc",
    "metadata": {},
    "outputs": [
@@ -1131,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 22,
    "id": "7c2d5053",
    "metadata": {},
    "outputs": [
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
    "id": "bafd7ff5",
    "metadata": {},
    "outputs": [
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 24,
    "id": "dd8c231c",
    "metadata": {},
    "outputs": [],
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 25,
    "id": "1fece4c9",
    "metadata": {},
    "outputs": [],
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 26,
    "id": "4f951b93",
    "metadata": {},
    "outputs": [
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 27,
    "id": "cda6fa00",
    "metadata": {},
    "outputs": [
@@ -1347,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 28,
    "id": "c7bb26cf",
    "metadata": {},
    "outputs": [
@@ -1403,7 +1403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "id": "ad69a0f4",
    "metadata": {},
    "outputs": [],
@@ -1422,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 30,
    "id": "88221a87",
    "metadata": {},
    "outputs": [],
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "id": "d1ec45e3",
    "metadata": {},
    "outputs": [
@@ -1447,13 +1447,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch: 0, Loss: 1.0022226572036743\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch: 0, Loss: 1.0022226572036743\n",
       "Epoch: 100, Loss: 0.1555042862892151\n",
       "Epoch: 200, Loss: 0.14303386211395264\n",
       "Epoch: 300, Loss: 0.1351591944694519\n",
@@ -1507,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 32,
    "id": "9867abce",
    "metadata": {},
    "outputs": [
@@ -1535,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 33,
    "id": "43a3e8dc",
    "metadata": {},
    "outputs": [
